--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
             <input type="text" value="" class="todoValue">
             <button class="btn">Add Todo</button>
         </div>
+        <div class="todoLists"></div>
     </form>
 </body>
 </html>
