Update in todo list functionality and add some css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">Todo List</h1>
+    <div class="main">
+        <h1 class="heading">Todo List</h1>
     <form>
         <div class="container">
             <input type="text" value="" class="todoValue">
@@ -16,5 +17,7 @@
         </div>
         <div class="todoLists"></div>
     </form>
+    </div>
+    
 </body>
 </html>
