--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <div class="main">
+        <h1 class="heading">Todo List</h1>
+    <form>
+        <div class="container">
+            <input type="text" value="" class="todoValue">
+            <button class="btn">Add Todo</button>
+        </div>
+        <div class="todoLists"></div>
+    </form>
+    </div>
     
 </body>
 </html>
